--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,17 @@
 {
-    "version": 2,
-    "builds": [
+  "version": 2,
+  "builds": [
       {
-        "src": "server.ts",
-        "use": "@vercel/node"
+          "src": "dist/index.js",
+          "use": "@vercel/node",
+          "config": { "includeFiles": ["dist/**"] }
       }
-    ],
-    "routes": [
+  ],
+  "routes": [
       {
-        "src": "/(.*)",
-        "dest": "/server.ts"
+          "src": "/(.*)",
+          "dest": "dist/index.js"
       }
-    ]
-  }
+  ]
+}
   
